--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
   },
   "rules": {
     "no-confusing-arrow": 0,
-    "react/jsx-quotes": 0,
-    "jsx-quotes": [2, "prefer-double"]
+    "jsx-quotes": [2, "prefer-double"],
+    "eol-last": 1
   }
 }
