--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "2.2.3",
     "cookie-parser": "1.4.1",
     "core-js": "^2.1.4",
+    "draft-js": "^0.2.2",
     "eventemitter3": "1.1.1",
     "express": "4.13.4",
     "express-graphql": "0.4.9",
