--- a/package.json
+++ b/package.json
@@ -13,26 +13,32 @@
     "classnames": "2.2.3",
     "cookie-parser": "1.4.1",
     "core-js": "^2.1.4",
-    "draft-js": "^0.2.2",
+    "draft-js": "^0.3.0",
     "eventemitter3": "1.1.1",
     "express": "4.13.4",
     "express-graphql": "0.4.9",
     "express-jwt": "3.3.0",
+    "express-session": "^1.13.0",
     "fastclick": "1.0.6",
     "fbjs": "0.7.2",
     "front-matter": "2.0.6",
     "fs-extra": "^0.26.7",
+    "gnodes": "git+https://github.com/hoomanlogic/gnodes.git#master",
     "graphiql": "0.6.0",
     "graphql": "0.4.18",
     "history": "2.0.1",
+    "hooman": "git+https://github.com/hoomanlogic/hooman.git#master",
     "isomorphic-style-loader": "0.0.12",
     "jade": "1.11.0",
+    "jquery": "^2.2.2",
     "jsonwebtoken": "5.7.0",
     "markdown-it": "6.0.0",
+    "method-override": "^2.3.5",
     "node-fetch": "1.3.3",
     "normalize.css": "3.0.3",
     "passport": "0.3.2",
     "passport-facebook": "2.1.0",
+    "passport-google-oauth": "^1.0.0",
     "pg": "4.5.1",
     "pretty-error": "2.0.0",
     "react": "0.14.7",
@@ -40,6 +46,8 @@
     "react-routing": "0.0.7",
     "source-map-support": "0.4.0",
     "those": "git+https://github.com/hoomanlogic/those.git#master",
+    "uuid": "^2.0.1",
+    "websocket": "^1.0.22",
     "whatwg-fetch": "0.11.0"
   },
   "devDependencies": {
